# suplang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Grammer/: GRAMMER.gram  GRAMMER.md
include/AST/: ASTNode.h
include/Interpreter/: Environment.h  Interpreter.h
include/Lexer/: Lexer.h  Token.h
include/Math/: Math.h
include/Object/: Object.h
include/Parser/: Parser.h
include/lexer/: lexer.h  token.h
src/: main.cpp
src/AST/: ASTNode.cpp
src/Interpreter/: Environment.cpp  Interpreter.cpp
src/Lexer/: Lexer.cpp
src/Math/: Math.cpp
src/Object/: Object.cpp
src/Parser/: Parser.cpp
src/lexer/: lexer.cpp
